--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
+dynamic = ["version"]
 name = "mypackage"
-version = "0.1.0"
 description = "A sample Python package"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -28,13 +28,17 @@ dev = [
     "pylint",
     "isort",
     "coverage",
+    "toml-cli",
 ]
 
 [tool.setuptools.packages.find]
 where = ["src"]
 
+[tool.setuptools-git-versioning]
+enabled = true
+
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools >= 61.0.0", "setuptools-git-versioning"]
 build-backend = "setuptools.build_meta"
 
 [project.scripts]
