Fix dist in Makefile, add templates as package-data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,9 @@ dev = [
 [tool.setuptools.packages.find]
 where = ["src"]
 
+[tool.setuptools.package-data]
+mymodule = ["templates/*"]
+
 [tool.setuptools-git-versioning]
 enabled = true
 template = "{tag}"
