--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,8 @@ exclude_lines = [
     # Have to re-enable the standard pragma
     "pragma: no cover",
     "if __name__ == '__main__'",
+    'if __name__ == "__main__"',
+    '^\s*print\(.*\)',
 
 ]
 fail_under = 90
