--- a/debian/control
+++ b/debian/control
@@ -7,10 +7,11 @@ Build-Depends: debhelper-compat (= 12),
                pybuild-plugin-pyproject,
                python3-all
 Standards-Version: 4.5.0
-X-Python3-Version: >= 3.2
+X-Python3-Version: >= 3.7
 
 Package: mymodule
 Architecture: all
 Multi-Arch: foreign
 Depends: ${misc:Depends}, ${python3:Depends}
-Description: auto-generated package by debmake
+Description: Boilerplate pyproject.toml 
+	based Python project
