Remove generated files
Signed-off-by: Toomas Vendelin <toomas.vendelin@ionos.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,13 @@
 dist/
 build/
 
-# Debian
+# Debian-generated
 debian/mymodule
+debian/debhelper-build-stamp
+debian/files
+debian/mymodule.postinst.debhelper
+debian/mymodule.prerm.debhelper
+debian/mymodule.substvars
 .pybuild/
 
 # pydoc generated documentation
