Add introspection and man generation for scripts
help2mdman.py generates md files for pandoc, which generates man pages
src/mymodule/whatcani.py lists console script endpoints with
descriptions.

Signed-off-by: Toomas Vendelin <toomas.vendelin@ionos.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ debian/mymodule.prerm.debhelper
 debian/mymodule.substvars
 .pybuild/
 
+# man pages
+man/
+man_md/
+
 # pydoc generated documentation
 html/
 
