--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
 
 [project.scripts]
 ohoo = "mymodule:main"
-
+mypackage = "mymodule.whatcani:list_tasks"
 
 # Development-related configuration below this line
 # -------------------------------------------------
@@ -44,6 +44,7 @@ dev = [
     "isort >= 5.0.0",
     "coverage",
     "toml-cli",
+    "pyyaml",
 ]
 
 [tool.setuptools.packages.find]
@@ -66,6 +67,8 @@ template = "{tag}"
 # foo, bar, etc. are used in example code
 bad-names = []
 max-line-length = 99 
+# Short variable names are OK in limited scope
+variable-rgx = "[a-z_][a-z0-9_]{2,30}"
 
 [tool.black]
 line-length = 99
